fix: letterAnswer handler
